--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
 		"extends @nextcloud/browserslist-config"
 	],
 	"engines": {
-		"node": "^14.0.0",
-		"npm": "^7.0.0"
+		"node": ">= 16.0.0",
+		"npm": "^8.0.0"
 	},
 	"dependencies": {
 		"@nextcloud/auth": "^2.0.0",
@@ -57,10 +57,10 @@
 		"@nextcloud/eslint-config": "^8.1.2",
 		"@nextcloud/stylelint-config": "^2.2.0",
 		"@nextcloud/webpack-vue-config": "^5.3.0",
-		"@vue/cli-plugin-unit-jest": "~5.0.0",
-		"@vue/test-utils": "^1.3.4",
+		"@vue/cli-plugin-unit-jest": "5.0.6",
+		"@vue/test-utils": "1.3.4",
 		"@vue/vue2-jest": "^27.0.0",
-		"eslint-webpack-plugin": "^3.2.0",
-		"stylelint-webpack-plugin": "^3.3.0"
+		"eslint-webpack-plugin": "^4.0.1",
+		"stylelint-webpack-plugin": "^4.1.1"
 	}
 }
