start implementing a reference provider and a reference widget that are used on NC >= 26 only
Signed-off-by: Julien Veyssier <julien-nc@posteo.net>
Signed-off-by: Swikriti Tripathi <swikriti808@gmail.com>

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -7,3 +7,5 @@ parameters:
         - bootstrap.php
     checkGenericClassInNonGenericObjectType: false
     reportUnmatchedIgnoredErrors: false
+    excludePaths:
+    	-  './lib/Reference/WorkPackageReferenceProvider.php'
