--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"lint:fix": "eslint --ext .js,.vue src tests --fix",
 		"stylelint": "stylelint css src",
 		"stylelint:fix": "stylelint css src --fix",
-		"test:unit": "jest --silent",
+		"test:unit": "jest",
 		"test:unit:watch": "jest --watch --no-coverage"
 	},
 	"repository": {
