--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     name: unit tests and linting
     strategy:
       matrix:
-        nextcloudVersion: [ stable23, stable24, stable25, stable26, master ]
+        nextcloudVersion: [ stable23, stable24, stable25, stable26, stable27, master ]
         phpVersion: [ 7.4, 8.0, 8.1 ]
         exclude:
           - nextcloudVersion: stable23
@@ -23,6 +23,8 @@ jobs:
           - nextcloudVersion: stable24
             phpVersion: 8.1
           - nextcloudVersion: stable26
+            phpVersion: 7.4
+          - nextcloudVersion: stable27
             phpVersion: 7.4
           - nextcloudVersion: master
             phpVersion: 7.4
@@ -154,7 +156,7 @@ jobs:
     name: API tests
     strategy:
       matrix:
-        nextcloudVersion: [ stable23, stable24, stable25, stable26, master ]
+        nextcloudVersion: [ stable23, stable24, stable25, stable26, stable27, master ]
         phpVersionMajor: [ 7, 8 ]
         phpVersionMinor: [ 4, 1 ]
         database: [pgsql, mysql]
@@ -166,6 +168,14 @@ jobs:
             phpVersionMajor: 8
             phpVersionMinor: 1
           - nextcloudVersion: stable26
+            phpVersionMajor: 7
+          - phpVersionMajor: 7
+            phpVersionMinor: 0
+          - phpVersionMajor: 7
+            phpVersionMinor: 1
+          - phpVersionMajor: 8
+            phpVersionMinor: 4
+          - nextcloudVersion: stable27
             phpVersionMajor: 7
           - phpVersionMajor: 7
             phpVersionMinor: 0
