Refactor the name of the project to follow uppar camel case
Signed-off-by: Swikriti Tripathi <swikriti808@gmail.com>

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "integration_openproject",
 	"version": "0.0.1",
-	"description": "OpenProject integration",
+	"description": "OpenProject Integration",
 	"main": "index.js",
 	"directories": {
 		"test": "tests"
