Encrypt the OAuth2 client secrets
check versions of nc

add migration step

update version and extensions

try running qb

disable migration

enable migration

enable migration

enable migration

enable migration

enable migration

remove migration

add more version checks

add more version checks

add migration

add migration

add extension

don't show secrets

update unit tests

fix api test

fix api test

Signed-off-by: Swikriti Tripathi <swikriti808@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,7 @@ jobs:
           php-version: ${{ matrix.phpVersion }}
           tools: composer, phpunit
           coverage: xdebug
+          extensions: gd, sqlite3
 
       - name: Get composer cache directory
         id: composer-cache
@@ -240,7 +241,7 @@ jobs:
         with:
           php-version: ${{ format('{0}.{1}', matrix.phpVersionMajor,matrix.phpVersionMinor) }}
           tools: composer
-          extensions: intl
+          extensions: intl, gd
 
       - name: Get composer cache directory
         id: composer-cache
