--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -155,11 +155,14 @@ jobs:
     name: API tests
     strategy:
       matrix:
-        nextcloudVersion: [ stable23, stable24, stable25, stable26, stable27 ]
+        nextcloudVersion: [ stable22, stable23, stable24, stable25, stable26, stable27 ]
         phpVersionMajor: [ 7, 8 ]
         phpVersionMinor: [ 4, 1 ]
         database: [pgsql, mysql]
         exclude:
+          - nextcloudVersion: stable22
+            phpVersionMajor: 8
+            phpVersionMinor: 1
           - nextcloudVersion: stable23
             phpVersionMajor: 8
             phpVersionMinor: 1
