--- a/phpstan.neon
+++ b/phpstan.neon
@@ -9,3 +9,4 @@ parameters:
     reportUnmatchedIgnoredErrors: false
     excludePaths:
     	-  './lib/Reference/WorkPackageReferenceProvider.php'
+    	- './tests/lib/Reference/WorkPackageReferenceProviderTest.php'
