--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,14 @@ jobs:
     strategy:
       matrix:
         nextcloudVersion: [ stable25, stable26, stable27, master ]
-        phpVersion: [ 8.0, 8.1 ]
+        phpVersion: [ 7.4, 8.0, 8.1 ]
+        exclude:
+          - nextcloudVersion: stable26
+            phpVersion: 7.4
+          - nextcloudVersion: stable27
+            phpVersion: 7.4
+          - nextcloudVersion: master
+            phpVersion: 7.4
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
@@ -160,9 +167,34 @@ jobs:
     strategy:
       matrix:
         nextcloudVersion: [ stable25, stable26, stable27, master ]
-        phpVersionMajor: [ 8 ]
-        phpVersionMinor: [ 1 ]
+        phpVersionMajor: [ 7, 8 ]
+        phpVersionMinor: [ 4, 1 ]
         database: [pgsql, mysql]
+        exclude:
+          - nextcloudVersion: stable26
+            phpVersionMajor: 7
+          - phpVersionMajor: 7
+            phpVersionMinor: 0
+          - phpVersionMajor: 7
+            phpVersionMinor: 1
+          - phpVersionMajor: 8
+            phpVersionMinor: 4
+          - nextcloudVersion: stable27
+            phpVersionMajor: 7
+          - phpVersionMajor: 7
+            phpVersionMinor: 0
+          - phpVersionMajor: 7
+            phpVersionMinor: 1
+          - phpVersionMajor: 8
+            phpVersionMinor: 4
+          - nextcloudVersion: master
+            phpVersionMajor: 7
+          - phpVersionMajor: 7
+            phpVersionMinor: 0
+          - phpVersionMajor: 7
+            phpVersionMinor: 1
+          - phpVersionMajor: 8
+            phpVersionMinor: 4
     runs-on: ubuntu-20.04
     container:
       image: ubuntu:latest
